获取用户信息写入到数据库

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE HTML >
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>java初学者</title>
@@ -27,17 +26,21 @@
                 <button type="submit" class="btn btn-default">搜索</button>
             </form>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="https://github.com/login/oauth/authorize?client_id=c003c1c22811d5046aa0&redirect_uri=http://localhost:8088/callback&scope=user&state=1">登录</a></li>
-                <li class="dropdown" th:if="">
+               <li class="dropdown" th:if="${session.user != null}" >
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">我 <span class="caret"></span></a>
+                       aria-expanded="false" th:text="${session.user.getName()}"> <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">消息更新</a></li>
                         <li><a href="#">个人资料</a></li>
                         <li><a href="#">退出登录</a></li>
                     </ul>
                 </li>
+                <li th:if="${session.user ==null}">
+                    <a href="https://github.com/login/oauth/authorize?client_id=c003c1c22811d5046aa0&redirect_uri=http://localhost:8088/callback&scope=user&state=1">登录</a>
+                </li>
             </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
+        </div>
+    </div>
 </nav>
+</body>
+</html>
